[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/8BIT CanariPack TopDown/SPRITES/HEROS/spritesheets/HEROS8bit_Adventurer Walk D.png" type="Texture" id=2]
[ext_resource path="res://assets/8BIT CanariPack TopDown/SPRITES/HEROS/spritesheets/HEROS8bit_Adventurer Walk U.png" type="Texture" id=3]
[ext_resource path="res://assets/8BIT CanariPack TopDown/SPRITES/HEROS/spritesheets/HEROS8bit_Adventurer Walk R.png" type="Texture" id=4]
[ext_resource path="res://assets/8BIT CanariPack TopDown/SPRITES/ITEMS/item8BIT_compass.png" type="Texture" id=5]
[ext_resource path="res://Magnet.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 4.35988
height = 7.4368

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 6.56999

[sub_resource type="CircleShape2D" id=17]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 320, 192 )
script = ExtResource( 1 )
ACCEL = 50
FRICTION = 20

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 13 )
animation = "walk_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12.1801 )
rotation = 1.5708
shape = SubResource( 14 )

[node name="Magnet" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="MagnetSprite" type="AnimatedSprite" parent="Magnet"]
frames = SubResource( 15 )
animation = "idle"

[node name="MagnetCollision" type="CollisionShape2D" parent="Magnet"]
shape = SubResource( 16 )

[node name="MagnetInfluence" type="Area2D" parent="Magnet"]

[node name="MagnetAttractCollision" type="CollisionShape2D" parent="Magnet/MagnetInfluence"]
shape = SubResource( 17 )
